<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/backgound">

    <Button
        android:id="@+id/btnIstighfar"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:text="@string/istighfar"
        android:textAlignment="center"
        android:textColor="@color/icon_color"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:icon="@drawable/istighfar"
        app:iconGravity="textEnd"
        app:iconPadding="10dp"
        app:iconSize="33dp"
        app:iconTint="@color/icon_color"
        app:layout_constraintEnd_toEndOf="@+id/btnSalat"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnSalat"
        app:layout_constraintTop_toBottomOf="@+id/btnSalat"
        app:strokeColor="@color/radius_color" />

    <Button
        android:id="@+id/btnTasbih"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:text="@string/tasbih"
        android:textColor="@color/icon_color"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:icon="@drawable/tasbihe"
        app:iconGravity="textEnd"
        app:iconPadding="10dp"
        app:iconSize="32dp"
        app:iconTint="@color/icon_color"
        app:layout_constraintEnd_toEndOf="@+id/btnadikr"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnadikr"
        app:layout_constraintTop_toBottomOf="@+id/btnadikr"
        app:strokeColor="@color/radius_color" />

    <Button
        android:id="@+id/btnadikr"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="30dp"
        android:text="@string/adikr"
        android:textAlignment="center"
        android:textColor="@color/icon_color"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:icon="@drawable/dua_hands"
        app:iconGravity="textEnd"
        app:iconPadding="10dp"
        app:iconSize="33dp"
        app:iconTint="@color/icon_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHome"
        app:strokeColor="@color/radius_color"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/textHome"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        android:paddingTop="16dp"
        android:text="@string/home_text"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageHome" />

    <ImageView
        android:id="@+id/imageHome"
        android:layout_width="410dp"
        android:layout_height="213dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backgroud_img" />

    <Button
        android:id="@+id/btnAibar"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:text="@string/aibar"
        android:textAlignment="center"
        android:textColor="@color/icon_color"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:icon="@drawable/sun_shining"
        app:iconGravity="textEnd"
        app:iconPadding="10dp"
        app:iconSize="32dp"
        app:iconTint="@color/icon_color"
        app:layout_constraintEnd_toEndOf="@+id/btnIstighfar"
        app:layout_constraintStart_toStartOf="@+id/btnIstighfar"
        app:layout_constraintTop_toBottomOf="@+id/btnIstighfar"
        app:strokeColor="@color/radius_color" />

    <Button
        android:id="@+id/btnSalat"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:text="@string/salat"
        android:textColor="@color/icon_color"
        android:textSize="22sp"
        android:textStyle="bold|italic"
        app:icon="@drawable/prophet"
        app:iconGravity="textEnd"
        app:iconPadding="8dp"
        app:iconSize="32dp"
        app:iconTint="@color/icon_color"
        app:layout_constraintEnd_toEndOf="@+id/btnTasbih"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnTasbih"
        app:layout_constraintTop_toBottomOf="@+id/btnTasbih"
        app:strokeColor="@color/radius_color" />
</androidx.constraintlayout.widget.ConstraintLayout>